tests/snapshots/cli_integration__cx_help.snap
---
source: tests/cli_integration.rs
assertion_line: 19
expression: stdout
---
cx is a lightweight, single-binary bootstrapper for conda.

It installs a minimal conda environment from an embedded lockfile in seconds,
uses conda-rattler-solver for solves, and conda-spawn for activation.

Usage: cx [OPTIONS] [COMMAND]

Commands:
  bootstrap  Bootstrap a fresh conda installation into the prefix
  status     Print cx status (prefix, channels, packages)
  shell      Activate an environment via subshell (alias for conda spawn)
  uninstall  Uninstall cx: remove the conda prefix and environments
  help       Show this help message

Options:
  -v, --verbose
          Increase output detail

  -q, --quiet
          Suppress non-essential output

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Quick start:

  cx bootstrap                           Install conda into ~/.cx
  cx create -n myenv python=3.12 numpy   Create an environment
  cx shell myenv                         Activate (spawns a subshell)
  exit                                   Leave the environment

Management:

  cx status                              Show installation details
  cx uninstall                           Remove conda prefix and all environments

Pass-through:

  Any command not listed above is passed through to conda:
  cx install, cx remove, cx list, cx env, cx info, cx config, ...

Docs: https://jezdez.github.io/pronto/
